# PixelPilot

./: .clang-format  .gitignore  .gitmodules  README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/mavlink/: build.gradle
app/mavlink/src/main/cpp/: CMakeLists.txt  mavlink.cpp  mavlink.h
app/mavlink/src/main/cpp/mavlink/: checksum.h  mavlink_conversions.h  mavlink_get_info.h  mavlink_helpers.h  mavlink_sha256.h  mavlink_types.h  protocol.h
app/mavlink/src/main/cpp/mavlink/ASLUAV/: ASLUAV.h  mavlink_msg_asl_obctrl.h  mavlink_msg_aslctrl_data.h  mavlink_msg_aslctrl_debug.h  mavlink_msg_asluav_status.h  mavlink_msg_command_int_stamped.h  mavlink_msg_command_long_stamped.h  mavlink_msg_ekf_ext.h  mavlink_msg_fw_soaring_data.h  mavlink_msg_gsm_link_status.h  mavlink_msg_sens_atmos.h  mavlink_msg_sens_batmon.h  mavlink_msg_sens_mppt.h  mavlink_msg_sens_power.h  mavlink_msg_sens_power_board.h  mavlink_msg_sensorpod_status.h  testsuite.h  version.h
app/mavlink/src/main/cpp/mavlink/ardupilotmega/: ardupilotmega.h  mavlink_msg_adap_tuning.h  mavlink_msg_ahrs.h  mavlink_msg_ahrs2.h  mavlink_msg_ahrs3.h  mavlink_msg_airspeed_autocal.h  mavlink_msg_aoa_ssa.h  mavlink_msg_ap_adc.h  mavlink_msg_autopilot_version_request.h  mavlink_msg_battery2.h  mavlink_msg_camera_feedback.h  mavlink_msg_camera_status.h  mavlink_msg_compassmot_status.h  mavlink_msg_data16.h  mavlink_msg_data32.h  mavlink_msg_data64.h  mavlink_msg_data96.h  mavlink_msg_deepstall.h  mavlink_msg_device_op_read.h  mavlink_msg_device_op_read_reply.h  mavlink_msg_device_op_write.h  mavlink_msg_device_op_write_reply.h  mavlink_msg_digicam_configure.h  mavlink_msg_digicam_control.h  mavlink_msg_ekf_status_report.h  mavlink_msg_esc_telemetry_1_to_4.h  mavlink_msg_esc_telemetry_5_to_8.h  mavlink_msg_esc_telemetry_9_to_12.h  mavlink_msg_fence_fetch_point.h  mavlink_msg_fence_point.h  mavlink_msg_fence_status.h  mavlink_msg_gimbal_control.h  mavlink_msg_gimbal_report.h  mavlink_msg_gimbal_torque_cmd_report.h  mavlink_msg_gopro_get_request.h  mavlink_msg_gopro_get_response.h  mavlink_msg_gopro_heartbeat.h  mavlink_msg_gopro_set_request.h  mavlink_msg_gopro_set_response.h  mavlink_msg_hwstatus.h  (+23 more)
app/mavlink/src/main/cpp/mavlink/autoquad/: autoquad.h  mavlink_msg_aq_esc_telemetry.h  mavlink_msg_aq_telemetry_f.h  testsuite.h  version.h
app/mavlink/src/main/cpp/mavlink/common/: common.h  mavlink_msg_actuator_control_target.h  mavlink_msg_actuator_output_status.h  mavlink_msg_adsb_vehicle.h  mavlink_msg_ais_vessel.h  (+220 more)
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: baseline_battery_0_bar_24.xml  baseline_battery_1_bar_24.xml  baseline_battery_2_bar_24.xml  baseline_battery_3_bar_24.xml  baseline_battery_4_bar_24.xml  baseline_battery_5_bar_24.xml  baseline_battery_6_bar_24.xml  baseline_battery_charging_full_24.xml  baseline_battery_full_24.xml  baseline_fiber_manual_record_24.xml  baseline_import_export_24.xml  baseline_personal_video_24.xml
app/src/main/res/layout/: activity_video.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  usb_device_filter.xml
app/videonative/: build.gradle  build.gradle.kts
app/videonative/src/main/cpp/: .clang-format  AndroidThreadPrioValues.hpp  AudioDecoder.cpp  AudioDecoder.h  BufferedPacketQueue.h  CMakeLists.txt  UdpReceiver.cpp  UdpReceiver.h  UdsReceiver.cpp  UdsReceiver.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h  minimp4.h  time_util.h
app/videonative/src/main/cpp/NALU/: H26X.hpp  KeyFrameFinder.hpp  NALU.hpp  NALUnitType.hpp
app/videonative/src/main/cpp/helper/: AndroidLogger.hpp  AndroidMediaFormatHelper.h  NDKArrayHelper.hpp  NDKHelper.hpp  NDKThreadHelper.hpp  StringHelper.hpp  TimeHelper.hpp
app/videonative/src/main/cpp/parser/: H26XParser.cpp  H26XParser.h  ParseRTP.cpp  ParseRTP.h  RTP.hpp
app/videonative/src/main/cpp/scripts/: format.sh
app/videonative/src/main/cpp/tests/: BufferedPacketQueue_test.cpp  CMakeLists.txt
app/wfbngrtl8812/: build.gradle  build.gradle.kts
app/wfbngrtl8812/src/main/cpp/: AdaptiveLinkController.cpp  AdaptiveLinkController.hpp  AggregatorManager.cpp  AggregatorManager.hpp  CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  FecChangeController.h  PacketProcessor.cpp  PacketProcessor.hpp  RxFrame.h  SignalQualityCalculator.cpp  SignalQualityCalculator.h  ThreadManager.cpp  ThreadManager.hpp  TxFrame.cpp  TxFrame.h  WfbConfiguration.hpp  WfbLogger.cpp  WfbLogger.hpp  WfbngLink.cpp  WfbngLink.hpp  WfbngLinkJNI.cpp  WfbngLinkJNI.hpp  wfb_log.h
app/wfbngrtl8812/src/main/cpp/include/: libusb.h  pcap.h  sodium.h
app/wfbngrtl8812/src/main/cpp/include/pcap/: bluetooth.h  bpf.h  can_socketcan.h  compiler-tests.h  dlt.h  funcattrs.h  ipnet.h  namedb.h  nflog.h  pcap-inttypes.h  sll.h  socket.h  usb.h  vlan.h
app/wfbngrtl8812/src/main/cpp/include/sodium/: core.h  crypto_aead_aegis128l.h  crypto_aead_aegis256.h  crypto_aead_aes256gcm.h  crypto_aead_chacha20poly1305.h  crypto_aead_xchacha20poly1305.h  crypto_auth.h  crypto_auth_hmacsha256.h  crypto_auth_hmacsha512.h  crypto_auth_hmacsha512256.h  crypto_box.h  crypto_box_curve25519xchacha20poly1305.h  crypto_box_curve25519xsalsa20poly1305.h  crypto_core_ed25519.h  crypto_core_hchacha20.h  crypto_core_hsalsa20.h  crypto_core_ristretto255.h  crypto_core_salsa20.h  crypto_core_salsa2012.h  crypto_core_salsa208.h  crypto_generichash.h  crypto_generichash_blake2b.h  crypto_hash.h  crypto_hash_sha256.h  crypto_hash_sha512.h  crypto_kdf.h  crypto_kdf_blake2b.h  crypto_kdf_hkdf_sha256.h  crypto_kdf_hkdf_sha512.h  crypto_kx.h  crypto_onetimeauth.h  crypto_onetimeauth_poly1305.h  crypto_pwhash.h  crypto_pwhash_argon2i.h  crypto_pwhash_argon2id.h  crypto_pwhash_scryptsalsa208sha256.h  crypto_scalarmult.h  crypto_scalarmult_curve25519.h  crypto_scalarmult_ed25519.h  crypto_scalarmult_ristretto255.h  (+22 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: format_sources.sh
(+122 files in other folders)
